--- a/Front/blogAngular/src/app/blogpost-creation/blogpost-creation.component.html
+++ b/Front/blogAngular/src/app/blogpost-creation/blogpost-creation.component.html
@@ -40,8 +40,7 @@
       </div>
       <div class="img">
         <label for="images"></label>
-        <button class="btn btn-success" type="button" (click)="upload()">Validate</button>
-        <input type="file" name="images" id="file" (change)="handleFileInput($event.target.files)" />
+        <input type="file" name="images" id="images" formControlName="images" (change)="handleFileInput($event)" />
       </div>
     </div>
     <button class="btn btn-success" type="submit">Send my article</button>
