--- a/Front/blogAngular/src/app/blogpost-list/blogpost-list.component.css
+++ b/Front/blogAngular/src/app/blogpost-list/blogpost-list.component.css
@@ -1,5 +1,16 @@
 .link {
-	color: white;
-	text-decoration: none;
-	text-align: center;
+  color: black;
+}
+.card-deck {
+  margin-top: 3%;
+  text-align: center;
+}
+
+.card-body {
+  height: 50%;
+}
+.card-img-top {
+  width: 455px;
+  height: 280px;
+  background-size: cover;
 }
