--- a/Front/blogAngular/src/app/blogpost/blogpost.component.html
+++ b/Front/blogAngular/src/app/blogpost/blogpost.component.html
@@ -7,6 +7,9 @@
         {{ bp[0].content }}
       </p>
     </div>
+    <i class="material-icons" style="cursor: pointer;" [routerLink]="['edit']">
+      edit
+    </i>
   </div>
 </ng-container>
 
