--- a/Front/blogAngular/src/app/edit-blog/edit-blog.component.html
+++ b/Front/blogAngular/src/app/edit-blog/edit-blog.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <form [formGroup]="creationForm" (submit)="createBlog()">
+<div class="container" *ngIf="blogpost as blog">
+  <form [formGroup]="editForm" (submit)="updateBlog()">
     <div class="form-group">
       <label for="exampleInputTitle1"><h6>Title</h6></label>
       <input
@@ -11,6 +11,7 @@
         formControlName="title"
         placeholder="Title"
         required
+        [value]="blog[0].title"
       />
     </div>
     <div class="form-group">
@@ -19,13 +20,15 @@
         maxlength="45"
         type="text"
         class="form-control"
-        formControlName="subTitle"
+        formControlName="subtitle"
         id="inputSubtitle"
         placeholder="Subtitle"
+        required
+        [value]="blog[0].subtitle"
       />
     </div>
     <div class="form-group">
-      <label for="exampleFormControlTextarea1"><h6>Example textarea</h6></label>
+      <label for="exampleFormControlTextarea1"><h6>Content</h6></label>
       <textarea
         maxlength="1000"
         class="form-control"
@@ -33,16 +36,24 @@
         rows="3"
         placeholder="Your article ..."
         formControlName="content"
+        [value]="blog[0].content"
         required
       ></textarea>
       <div class="caracCount">
-        {{ 1000 - creationForm.value.content.length }}
+        {{ 1000 - blog[0].content.length }}
       </div>
       <div class="img">
         <label for="images"></label>
-        <input type="file" name="images" id="images" formControlName="images" (change)="handleFileInput($event)" />
+        <input
+          type="file"
+          name="images"
+          id="images"
+          formControlName="images"
+          [value]="blog[0].images"
+          (change)="handleFileUpdate($event)"
+        />
       </div>
     </div>
-    <button class="btn btn-success" type="submit">Post your article</button>
+    <button class="btn btn-success" type="submit">Update my article</button>
   </form>
 </div>
