--- a/Front/blogAngular/src/app/blogpost-list/blogpost-list.component.css
+++ b/Front/blogAngular/src/app/blogpost-list/blogpost-list.component.css
@@ -21,7 +21,12 @@
   height: 50%;
 }
 .card-img-top {
-  max-height: 303px;
-  max-width: 100%;
-  background-size: cover;
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
+}
+
+.ifNoImg{
+  width: 35%;
+  margin-top: 5%;
 }
