--- a/Front/blogAngular/src/app/blogpost-list/blogpost-list.component.html
+++ b/Front/blogAngular/src/app/blogpost-list/blogpost-list.component.html
@@ -1,4 +1,4 @@
-<div class="card-deck border-dark" *ngIf="isImg">
+<div class="card-deck border-dark" *ngIf="isImg; else ifNot">
   <div class="card text-white bg-secondary mb-3" *ngFor="let blog of blogPostList$ | async">
     <img class="card-img-top" onerror="this.style.display='none'" [src]="imagePath + blog.images" />
     <div class="card-header">
@@ -13,3 +13,18 @@
     </div>
   </div>
 </div>
+
+<ng-template #ifNot>
+  <div class="ifNoImg card text-white bg-secondary mb-3" *ngFor="let blog of blogPostList$ | async">
+    <div class="card-header">
+      <h4>
+        <a class="link" [routerLink]="['theblog', blog.id]">{{ blog.title }}</a>
+      </h4>
+    </div>
+    <div class="card-body text-dark">
+      <h5 class="card-title">{{ blog.subtitle }}</h5>
+      <hr />
+      <p class="card-text">{{ blog.content }}</p>
+    </div>
+  </div>
+</ng-template>
