--- a/Front/blogAngular/src/app/blogpost/blogpost.component.html
+++ b/Front/blogAngular/src/app/blogpost/blogpost.component.html
@@ -1,5 +1,6 @@
 <ng-container *ngIf="blogpost$ | async as bp; else loading">
   <div class="card text-white bg-secondary mb-3" style="max-width: 18rem;">
+    <img *ngIf='isImg' class="card-img-top" [src]="imagePath + bp[0].images">
     <div class="card-header">{{ bp[0].title }}</div>
     <div class="card-body">
       <h5 class="card-title">{{ bp[0].subtitle }}</h5>
